--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
-.venv
-__pychase__/
-*.py[cod]
-*$py.class
+.venv/
+
+*.pyc
+__pycache__/
+
+instance/
+
+.pytest_cache/
+.coverage
+htmlcov/
+
+dist/
+build/
+*.egg-info/
